Bug 282426 - Fails to resume from proper progress after system crash or program halt.
Summary: Fails to resume from proper progress after system crash or program halt.
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: Core (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-20 17:57 UTC by TLUL
Modified: 2011-09-23 12:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TLUL 2011-09-20 17:57:23 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

If the system crashes, or if the program is halted while downloads are still running, all download progress since the last time the download was paused is lost.

Reproducible: Always

Steps to Reproduce:
Commence a download. Wait for some of the file to download. Kill the program or do a hard system shutdown, and then reopen the program.

Actual Results:  
Download resumes from 0%, or the progress at which it was last paused. Data downloaded since that must be redownloaded.

Expected Results:  
Download resumes from previous progress. Little to no data must be redownloaded.

OS: Linux (i686) release 2.6.38-8-generic-pae
Compiler: cc

Linux Mint Katya 32-bit, almost completely fresh install.
KGet 2.6.2

Recommended fix: Save download progress at regular intervals while downloading, instead of just when downloads are started or stopped, or when the program is closed.
Comment 1 Matthias Fuchs 2011-09-23 11:41:45 UTC
SVN commit 1255084 by mfuchs:

Saves regularly when there are running jobs.

Saves whenever the transfer status changes and regularly if there are
running jobs.
BUG:282426

 M  +6 -2      kget.cpp  
 M  +17 -2     scheduler.cpp  
 M  +6 -1      scheduler.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1255084
Comment 2 Matthias Fuchs 2011-09-23 11:59:00 UTC
SVN commit 1255149 by mfuchs:

Backport r1255084
Saves regularly when there are running jobs.

Saves whenever the transfer status changes and regularly if there are
running jobs.
BUG:282426

 M  +6 -2      kget.cpp  
 M  +15 -1     scheduler.cpp  
 M  +6 -1      scheduler.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1255149