Saves regularly when there are running jobs.

Saves whenever the transfer status changes and regularly if there are
running jobs.
BUG:282426

svn path=/trunk/KDE/kdenetwork/kget/; revision=1255084